Added a way to get Wallachian territories back peacefully to Romania
Added Unique Chinese Traits, Increased Generals for the Warlords: Anhui, Zhili, Fengtian, Shaanxi and Xinjiang
Added Czech names for their states and vps when owned by Czechia
Added a new portrait for Nicholas II
Added new Austrian victory points
Added new social buttons in main menu
Fixed Romanian focus Carp Constitution not removing the King's Opinion
Fixed Romanian focus Demand Banat not sending event to right country
Fixed a Romanian event triggering when in Central Powers
Fixed Romanian focus Preventing a Brain Drain bypassing
Fixed German decision "Fortify Aisne" not working
Fixed Austrian focus "End Slav Opposition" bypassing when Bosnia is a subject
Made Henri Coandă a scientist instead of an advisor
Fixed Belgian Cavalry division being undeletable