@@ -2608,3 +2608,39 @@ ROM_the_romanian_economy_cat = {
 		}
 	}
 }
+ROM_tutorial = {
+	ROM_tutorial_event_trigger = {
+		icon = GFX_decision_generic_construction
+		cost = 0
+		allowed = {
+			original_tag = ROM
+		}
+		visible = {
+			always = yes
+		}
+		fire_only_once = no
+		ai_will_do = {
+			factor = 0
+		}
+		complete_effect = {
+			country_event = ww1_romania.160
+		}
+	}
+	ROM_disable_tutorial = {
+		icon = GFX_decision_generic_construction
+		cost = 0
+		allowed = {
+			original_tag = ROM
+		}
+		visible = {
+			always = yes
+		}
+		fire_only_once = no
+		ai_will_do = {
+			factor = 0
+		}
+		complete_effect = {
+			set_country_flag = ROM_no_more_tutorial
+		}
+	}
+}
