@@ -66,3 +66,16 @@ ROM_the_romanian_economy_cat ={
     }
     
 }
+ROM_tutorial ={
+    visible_when_empty = no
+    priority = 400
+    allowed = {
+        tag = ROM
+    }
+    visible = {
+        NOT = {
+            has_country_flag = ROM_no_more_tutorial
+        }
+    }
+    
+}
