@@ -1953,9 +1953,7 @@ country_event = {
 	is_triggered_only = yes
 	option = {
 		name = ww1_romania.74.a
-		set_global_flag = great_war_ends
-		complete_national_focus = ROM_new_times
-		mark_focus_tree_layout_dirty = yes
+		clr_country_flag = ROM_no_more_tutorial
 	}
 	option = {
 		name = ww1_romania.74.b
@@ -5168,5 +5166,95 @@ country_event = {
 				}
 			}
 		}
+	}
+}
+
+## Romania Path Guide
+country_event = { 
+	id = ww1_romania.160
+	title = ww1_romania.160.t
+	desc = ww1_romania.160.d
+	is_triggered_only = yes
+	option = { # Path Guide
+		name = ww1_romania.160.a
+		country_event = ww1_romania.165
+	}
+	option = { # Mechanics Guide
+		name = ww1_romania.160.b
+		country_event = ww1_romania.166
+	}
+}
+country_event = { 
+	id = ww1_romania.165
+	title = ww1_romania.165.t
+	desc = ww1_romania.165.d
+	is_triggered_only = yes
+	option = { # Historical Path?
+		name = ww1_romania.165.a
+		country_event = ww1_romania.161
+	}
+	option = { # Socialist Path?
+		name = ww1_romania.165.b
+		country_event = ww1_romania.162
+	}
+	option = { # Monarchist Path?
+		name = ww1_romania.165.c
+		country_event = ww1_romania.163
+	}
+	option = { # Carp-Dictatorship Path?
+		name = ww1_romania.165.f
+		country_event = ww1_romania.160
+	}
+}
+country_event = { #Historical Path Guide
+	id = ww1_romania.161
+	title = ww1_romania.161.t
+	desc = ww1_romania.161.d
+	is_triggered_only = yes
+	option = { # Go Back
+		name = ww1_romania.161.a
+		country_event = ww1_romania.165
+	}
+	option = { # Leave
+		name = ww1_romania.160.c
+	}
+}
+country_event = { #Socialist Path Guide
+	id = ww1_romania.162
+	title = ww1_romania.162.t
+	desc = ww1_romania.162.d
+	is_triggered_only = yes
+	option = { # Go Back
+		name = ww1_romania.161.a
+		country_event = ww1_romania.165
+	}
+	option = { # Leave
+		name = ww1_romania.160.c
+	}
+}
+country_event = { #Monarchist Path Guide
+	id = ww1_romania.163
+	title = ww1_romania.163.t
+	desc = ww1_romania.163.d
+	is_triggered_only = yes
+	option = { # Go Back
+		name = ww1_romania.161.a
+		country_event = ww1_romania.165
+	}
+	option = { # Leave
+		name = ww1_romania.160.c
+	}
+}
+country_event = { 
+	id = ww1_romania.166
+	title = ww1_romania.166.t
+	desc = ww1_romania.166.d
+	is_triggered_only = yes
+	option = { # King's Rotation
+		name = ww1_romania.166.a
+		country_event = ww1_romania.160
+	}
+	option = { # Leave
+		name = ww1_romania.160.c
 	}
 }
