@@ -1901,3 +1901,29 @@ ww1_romania.74.d: "Event for developers and testers"
 ww1_romania.74.a: "Unlock postwar tree (WARNING MIGHT BREAK GAME)"
 ww1_romania.74.b: "Trigger world war one"
 ww1_romania.74.c: "Unlock Treaty of Bucharest Tree"
+
+### -- PATH GUIDES FOR DUMMIES -- ##
+ROM_tutorial: "Guide for Romania"
+ROM_tutorial_event_trigger: "How to play Romania?"
+ROM_disable_tutorial: "Disable the Tutorial\n§RTHIS WILL REMOVE IT FOR THE REST OF THE GAME!§!"
+ww1_romania.160.t: "Romania Guide"
+ww1_romania.160.d: "Romania might be a complicated nation to play. This is a path guide to mechanics and different paths."
+ww1_romania.160.a: "Path Guides"
+ww1_romania.160.b: "Mechanics Guide"
+ww1_romania.165.t: "Path Guides for Romania"
+ww1_romania.165.a: "HISTORICAL path"
+ww1_romania.165.b: "SOCIALIST path"
+ww1_romania.165.c: "MONARCHIST path"
+ww1_romania.165.f: "Go Back"
+ww1_romania.161.t: "Historical Path Guide for Romania"
+ww1_romania.161.d: "To complete the historical path:\nFail the land reform bill, then complete the §GBratianu's Resignation§! focus.\nComplete your focuses until the king chooses another government, where you will pick the Agrarian Candidate to win, to complete the §GThe Agrarianist Candidate§! focus.\nIn the next round of the King choosing its government, choose the§o PNL§! (Liberal) to win again to complete §GThe Natural Party of Governance§!.\nFrom here, forge your own path and follow the Historical Focus filter for historical gameplay."
+ww1_romania.161.a: "Go Back"
+ww1_romania.162.t: "Socialist Path Guide for Romania"
+ww1_romania.162.d: "To complete the socialist path:\nFail the land reform bill, then complete the §GBratianu's Resignation§! focus.\nComplete your focuses until the next round of the King choosing its government, choose the§o PNL§! (Liberal) to win again to complete §GThe Natural Party of Governance§!.\nRush down the §GAgrarian Protectionism§! focus and complete §GExpand our Majority in Parliament§!, then §GInternal Coup of the PNL§! to §GA New Constitution§!."
+ww1_romania.163.t: "Monarchist Path Guide for Romania"
+ww1_romania.163.d: "To complete the monarchist path:\nFail the land reform bill, then complete the §GBratianu's Resignation§! focus.\nRush down the §GCo-opt Romanian Nationalism§! focus, then down to §GEnd the Liberal Boycott§! and §GHalve Parliament Seats§!. Then, choose §GThe Party of Thieves§! and complete §GA Stable Government§! AFTER.\nYou can now rush down the §GDeclare a State of Emergency§! path down to §GBan the PNL and the PCD§!.\nIn the event '§RRiots in the North§!', choose the second option to complete §GThe Second Great Disaster§!."
+ww1_romania.166.t: "King's Country mechanic"
+ww1_romania.166.d: "The King in Romania has the power to switch governments at any time he deems the current one not in his favor. This is represented through the decisions menu. Every §R140 days§!, the King's opinion of the current government goes §Rdown§!. If it goes down too much, a decision will appear that will trigger an event to replace the current government with another one. This means that Romania can go 5+ paths in a game. The king's opinion can be modified through focuses and events. The King's opinion will also have no impact on the game anymore after certain focuses."
+ww1_romania.166.a: "Go Back"
+ww1_romania.160.c: "I get it now"
+ww1_romania.165.d: ""
