@@ -12,3 +12,4 @@ Fixed German decision "Fortify Aisne" not working
 Fixed Austrian focus "End Slav Opposition" bypassing when Bosnia is a subject
 Made Henri Coandă a scientist instead of an advisor
 Fixed Belgian Cavalry division being undeletable
+Added a guide for Romania
